--- a/index.html
+++ b/index.html
@@ -23,40 +23,9 @@
         <meta data-n-head="ssr" data-hid="description" name="description" content="当サイトはitou332が開設したものです。">
 <meta data-n-head="ssr" data-hid="og:description" property="og:description" content="当サイトはitou332が開設したものです。">
         </head>
-<body>
+<body> 
     <header>
-                <script>
-const last = new Date(document.lastModified);
-</script> 
-    <script>
-const year = last.getFullYear();
-const month = last.getMonth() + 1;
-const date = last.getDate();
-</script> 
-<script>
-// 月・日の値を修正した後に格納する変数を用意する
-let fixedMonth = month;
-let fixedDate = date;
-// 月の値が10より小さい場合は先頭に「0」を追加
-if (month < 10) {
-fixedMonth = "0" + month;
-}
-// 日の値が10より小さい場合は先頭に「0」を追加
-if (date < 10) {
-fixedDate = "0" + date;
-}
-</script> 
-<script>
-const viewDateText = year + "年" + month + "月" + date + "日";
-const datetimeText = year + "-" + fixedMonth + "-" + fixedDate;
-</script> 
-
-<p>更新日: <time id="modified_date"></time></p>
-<script>
-const target = document.getElementById('modified_date');
-target.textContent = viewDateText;
-target.setAttribute("datetime", datetimeText);
-</script>
+      <p>変更日:2024/8/22</p>
         <h1>6項</h1>
   <nav aria-label="サイト内メニュー">
     <p>*献立</p>
@@ -79,7 +48,7 @@ target.setAttribute("datetime", datetimeText);
     -<a href="https://itou332.github.io/Castanea/">16項</a>
     -<a href="https://itou332.github.io/Privacy-policy/">免責事項</a>
     -<a href="https://github.com/itou332">my github</a>
-    -<a href="http://itou33good.starfree.jp/">itou</a>
+    -<a href="https://redirect-adp.pages.dev/">itou</a>
    </nav>
     </header>
     <mian>
@@ -13151,7 +13120,7 @@ target.setAttribute("datetime", datetimeText);
     -<a href="https://itou332.github.io/Castanea/">16項</a>
     -<a href="https://itou332.github.io/Privacy-policy/">免責事項</a>
     -<a href="https://github.com/itou332">my github</a>
-    -<a href="http://itou33good.starfree.jp/">itou</a>
+    -<a href="https://redirect-adp.pages.dev/">itou</a>
    </nav>
  <svg xmlns="http://www.w3.org/2000/svg" width="200" height="250">
                 <text x="0" y="30" transform="rotate(45 40,40)">
