--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         
           gtag('config', 'G-YWDRL1ZXBE');
         </script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://github.com/itou332/nontitle/blob/main/style.css">
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
         <!-- Favicon head tag -->
-        <link rel="icon" type="img/x-icon" href="./favicon.png">
-        <link rel="apple-touch-icon" href="./images/favicon.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="./images/favicon.png" sizes="192x192">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="img/x-icon" href="https://github.com/itou332/nontitle/blob/main/style.css">
+        <link rel="apple-touch-icon" href="https://github.com/itou332/nontitle/blob/main/style.css" sizes="180x180">
+        <link rel="icon" type="image/png" href="https://github.com/itou332/nontitle/blob/main/style.css" sizes="192x192">
+        <link rel="shortcut icon" type="image/x-icon" href="https://github.com/itou332/nontitle/blob/main/style.css">
         <meta name="keywords" content="painting record,記録,6項,nottitle,せきく">
         <meta data-n-head="ssr" data-hid="description" name="description" content="当サイトはitou332が開設したものです。">
 <meta data-n-head="ssr" data-hid="og:description" property="og:description" content="当サイトはitou332が開設したものです。">
         </head>
 <body> 
     <header>
-      <p>変更日:2024/8/22</p>
+      <p>変更日:2024/8/28</p>
         <h1>6項</h1>
   <nav aria-label="サイト内メニュー">
     <p>*献立</p>
