--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
         <meta name="keywords" content="painting record,記録,6項,nottitle,せきく">
         <meta data-n-head="ssr" data-hid="description" name="description" content="当サイトはitou332が開設したものです。">
 <meta data-n-head="ssr" data-hid="og:description" property="og:description" content="当サイトはitou332が開設したものです。">
+        <style>
+            BODY,DIV,TABLE,THEAD,TBODY,TFOOT,TR,TH,TD,P,ul,li{ 
+    font-family:"Times New Roman"; font-size:x-small ;
+}
+body{
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+SVG {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ }
+
+h1 h3 p a div{ 
+        text-align: center ;
+    }   
+
+.container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+svg,script {
+        margin:  auto;  /* ボックス中央寄せ */
+    }
+
+        </style>
         </head>
 <body> 
     <header>
