--- a/index.html
+++ b/index.html
@@ -53,11 +53,30 @@ h1 h3 p a div{
 svg,script {
         margin:  auto;  /* ボックス中央寄せ */
     }
-      </style>    
+      </style>
+             <!-- JSON-LD -->
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "Website",
+          "name": "せきく絵/SekikuSketch",
+          "description": "itouが制作したSVG画像を掲載しているサイトです。",
+          "url": "https://nontitle.pages.dev/",
+          "potentialAction": {
+              "@type": "SearchAction",
+              "target": "https://nontitle.pages.dev/search?q={search_term_string}",
+              "query-input": "required name=search_term_string"
+          },
+          "mainEntityOfPage": {
+              "@type": "WebPage",
+              "@id": "https://itou332.github.io/nontitle/"
+          }
+      }
+      </script>    
       </head>
 <body> 
     <header>
-      <p>変更日:2024/10/31</p>
+      <p>変更日:2024/12/24</p>
         <h1>6項</h1>
   <nav aria-label="サイト内メニュー">
     <p>*献立</p>
@@ -13156,7 +13175,7 @@ svg,script {
    </nav>
  <svg xmlns="http://www.w3.org/2000/svg" width="200" height="250">
                 <text x="0" y="30" transform="rotate(45 40,40)">
-                © 2024 itou Inc.
+                © itou Inc.
                 </text>
               </svg>
 </footer>
