--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
         <!-- Created with Inkscape (http://www.inkscape.org/) -->
         <!-- Favicon head tag -->
-        <link rel="icon" type="img/x-icon" href="https://github.com/itou332/nontitle/blob/main/style.css">
-        <link rel="apple-touch-icon" href="https://github.com/itou332/nontitle/blob/main/style.css" sizes="180x180">
-        <link rel="icon" type="image/png" href="https://github.com/itou332/nontitle/blob/main/style.css" sizes="192x192">
-        <link rel="shortcut icon" type="image/x-icon" href="https://github.com/itou332/nontitle/blob/main/style.css">
+        <link rel="icon" type="img/x-icon" href="https://raw.githubusercontent.com/itou332/itou332.github.io/refs/heads/gh-pages/favicon.ico">
+        <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/itou332/itou332.github.io/refs/heads/gh-pages/favicon.ico" sizes="180x180">
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/itou332/itou332.github.io/refs/heads/gh-pages/favicon.ico" sizes="192x192">
+        <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/itou332/itou332.github.io/refs/heads/gh-pages/favicon.ico">
         <meta name="keywords" content="painting record,記録,6項,nottitle,せきく">
         <meta data-n-head="ssr" data-hid="description" name="description" content="当サイトはitou332が開設したものです。">
         <meta data-n-head="ssr" data-hid="og:description" property="og:description" content="当サイトはitou332が開設したものです。">
